Attempt to fix overflowing photo issue in IE.

--- a/app/assets/stylesheets/observations/show2.scss
+++ b/app/assets/stylesheets/observations/show2.scss
@@ -396,6 +396,7 @@ a.UserImage {
           }
           .image-gallery-image {
             position: relative;
+            width: 100%; // needed for IE
           }
           .captions {
             line-height: 18px;
